// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordField render() renders 1`] = `
<PasswordField
  disabled={false}
  hasSavedValue={false}
  hideErrorMessage={false}
  name="fieldName"
  prefix=""
  required={false}
>
  <div
    className="control-group"
  >
    <div
      className="controls"
    >
      <input
        className="form-control"
        disabled={false}
        id="id-fieldName"
        name="fieldName"
        onChange={[Function]}
        required={false}
        type="password"
        value=""
      />
    </div>
  </div>
</PasswordField>
`;

exports[`PasswordField render() renders with form context 1`] = `
<PasswordField
  disabled={false}
  hasSavedValue={false}
  hideErrorMessage={false}
  name="fieldName"
  prefix=""
  required={false}
>
  <div
    className="control-group"
  >
    <div
      className="controls"
    >
      <input
        className="form-control"
        disabled={false}
        id="id-fieldName"
        name="fieldName"
        onChange={[Function]}
        required={false}
        type="password"
        value="foobar"
      />
    </div>
  </div>
</PasswordField>
`;

exports[`PasswordField render() renders with value 1`] = `
<PasswordField
  disabled={false}
  hasSavedValue={false}
  hideErrorMessage={false}
  name="fieldName"
  prefix=""
  required={false}
  value="foobar"
>
  <div
    className="control-group"
  >
    <div
      className="controls"
    >
      <input
        className="form-control"
        disabled={false}
        id="id-fieldName"
        name="fieldName"
        onChange={[Function]}
        required={false}
        type="password"
        value="foobar"
      />
    </div>
  </div>
</PasswordField>
`;
